[workspace]
members = [".", "rok-crypto-macros"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["ateeq1999"]
repository = "https://github.com/ateeq1999/rok-crypto"
homepage = "https://github.com/ateeq1999/rok-crypto"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = { version = "1" }
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "chrono",
    "uuid",
    "json",
] }
tokio = { version = "1", default-features = false }
axum = { version = "0.8" }
tower = { version = "0.5" }
http = { version = "1" }
dashmap = { version = "6" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
clap = { version = "4", features = ["derive"] }

# ── Package ──────────────────────────────────────────────────────────────────

[package]
name = "rok-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Eloquent-inspired async ORM for Rust (PostgreSQL, MySQL, SQLite)"
keywords = ["orm", "database", "async", "postgres", "sqlx"]
categories = ["database"]
readme = "README.md"
exclude = ["docs/", "plan.md", "todo.md", ".github/", "target/"]

[lib]
name = "rok_crypto"
path = "src/lib.rs"

[[bin]]
name = "rok"
path = "src/bin/rok.rs"
required-features = ["cli"]

# ── Features ─────────────────────────────────────────────────────────────────

[features]
# Always-on: derive macros (Model, Resource, Seed, query!)
default = ["macros"]

# Proc-macro derive support
macros = ["dep:rok-crypto-macros"]

# ── Query styles ──────────────────────────────────────────────────────────────

# Active Record / Eloquent style — PgModel, MysqlModel, SqliteModel, ModelQuery,
# PivotQuery, MorphTo*, ThroughQuery.  Requires at least one database backend.
active = []

# Drizzle-style typed query DSL — db::select().from(users::table).where_(...).
# Requires at least one database backend.
query = []

# ── Database backends ─────────────────────────────────────────────────────────
postgres = [
    "dep:sqlx",
    "sqlx/postgres",
    "sqlx/runtime-tokio-native-tls",
    "dep:tokio",
    "tokio/rt",
    "dep:futures-core",
    "dep:futures",
    "dep:dashmap",
]
sqlite = [
    "dep:sqlx",
    "sqlx/sqlite",
    "sqlx/runtime-tokio-native-tls",
    "dep:tokio",
    "tokio/rt",
]
mysql = [
    "dep:sqlx",
    "sqlx/mysql",
    "sqlx/runtime-tokio-native-tls",
    "dep:tokio",
    "tokio/rt",
]

# Web / tower integration (implies postgres)
axum = ["dep:axum", "dep:tower", "postgres"]

# Observability
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

# Multi-tenancy (task-local tenant ID + Tower layer)
tenant = ["dep:tower", "dep:http", "dep:tokio", "tokio/rt"]

# Read-replica routing strategies
replica = []

# Test / seeding factories
factory = []
factory-postgres = ["factory", "postgres"]

# Migrations
migrate = ["dep:async-trait", "dep:anyhow"]
migrate-postgres = ["migrate", "postgres"]
migrate-sqlite = ["migrate", "sqlite"]
migrate-mysql = ["migrate", "mysql"]

# rok db CLI — rok db migrate|rollback|status|make|seed|schema
cli = ["dep:clap", "migrate-postgres"]

# Convenience bundle
full = [
    "macros",
    "active",
    "query",
    "postgres",
    "axum",
    "tracing",
    "metrics",
    "tenant",
    "replica",
    "factory-postgres",
    "migrate-postgres",
    "cli",
]

# ── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
# always-on
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

# feature-gated
rok-crypto-macros = { version = "0.4", path = "rok-crypto-macros", optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures-core = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
dashmap = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
http = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.24", optional = true }
async-trait = { version = "0.1", optional = true }
anyhow = { version = "1", optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
