[package]
name = "rok-crypto"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["ateeq1999"]
repository = "https://github.com/ateeq1999/rok-crypto"
homepage = "https://github.com/ateeq1999/rok-crypto"
description = "Cryptographic primitives for the Rok ecosystem — encryption, password hashing (Argon2/Bcrypt/Scrypt), and collision-resistant ID generation (CUID2/ULID/UUIDv7/NanoID/Snowflake)"
keywords = [
    "crypto", "encryption", "hashing", "ids", "rok",
    "cuid2", "ulid", "uuid", "argon2", "bcrypt", "scrypt", "nanoid", "snowflake",
    "aes-gcm", "hmac",
]
categories = ["cryptography", "authentication", "data-structures", "web-programming"]
readme = "README.md"
exclude = ["docs/", "plan.md", "todo.md", ".github/", "target/"]

[lib]
name = "rok_crypto"
path = "src/lib.rs"

# ── Features ─────────────────────────────────────────────────────────────────

[features]
default = ["ids", "hash", "encrypt"]

# ID generators
ids         = ["cuid2", "ulid", "uuid-v7", "nanoid"]
cuid2       = ["dep:sha3", "dep:rand"]
ulid        = ["dep:rand"]
uuid-v7     = ["dep:uuid"]
nanoid      = ["dep:rand"]
snowflake   = []

# Password hashing — at least one driver required for hash to be useful
hash        = ["argon2"]
argon2      = ["dep:argon2", "dep:password-hash"]
bcrypt      = ["dep:bcrypt"]
scrypt      = ["dep:scrypt", "dep:password-hash"]

# SHA-2 / SHA-3 digest helpers
sha         = ["dep:sha2", "dep:sha3"]

# AES-256-GCM authenticated encryption + HMAC signing
encrypt     = [
    "dep:aes-gcm", "dep:hmac", "dep:base64", "dep:sha2",
    "dep:serde_json", "dep:chrono", "dep:rand",
]

# SQLx PostgreSQL type impls for ID types
sqlx-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/uuid"]

# All features (publish-ready)
full = [
    "ids", "snowflake", "hash", "bcrypt", "scrypt", "sha",
    "encrypt", "sqlx-postgres",
]

# ── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
thiserror = "2"
serde     = { version = "1", features = ["derive"] }

serde_json  = { version = "1", optional = true }
base64      = { version = "0.22", optional = true }
chrono      = { version = "0.4", features = ["serde"], optional = true }
uuid        = { version = "1", features = ["v7", "serde"], optional = true }
rand        = { version = "0.8", optional = true }
sha2        = { version = "0.10", optional = true }
sha3        = { version = "0.10", optional = true }
argon2      = { version = "0.5", optional = true }
bcrypt      = { version = "0.19", optional = true }
scrypt      = { version = "0.11", features = ["password-hash"], optional = true }
password-hash = { version = "0.5", features = ["rand_core", "std"], optional = true }
aes-gcm     = { version = "0.10", optional = true }
hmac        = { version = "0.12", optional = true }
sqlx        = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
