[package]
name = "rok-crypto"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["ateeq1999"]
repository = "https://github.com/ateeq1999/rok-crypto"
homepage = "https://github.com/ateeq1999/rok-crypto"
description = "Pure cryptographic primitives — encryption, password hashing, ID generation, TOTP, JWT, password policies, and secure random utilities"
keywords = [
    "crypto", "encryption", "hashing", "ids", "totp", "jwt",
    "cuid2", "ulid", "uuid", "argon2", "bcrypt", "scrypt", "nanoid", "snowflake",
    "aes-gcm", "hmac", "password",
]
categories = ["cryptography", "authentication", "data-structures", "web-programming"]
readme = "README.md"
exclude = ["target/"]

[lib]
name = "rok_crypto"
path = "src/lib.rs"

# ── Features ─────────────────────────────────────────────────────────────────

[features]
default = ["ids", "hash", "encrypt"]

# ID generators
ids         = ["cuid2", "ulid", "uuid-v7", "nanoid"]
cuid2       = ["dep:sha3", "dep:rand"]
ulid        = ["dep:rand"]
uuid-v7     = ["dep:uuid"]
nanoid      = ["dep:rand"]
snowflake   = []

# Password hashing
hash        = ["argon2"]
argon2      = ["dep:argon2", "dep:password-hash"]
bcrypt      = ["dep:bcrypt"]
scrypt      = ["dep:scrypt", "dep:password-hash"]
sha         = ["dep:sha2", "dep:sha3"]

# Encryption + signing
encrypt     = [
    "dep:aes-gcm", "dep:hmac", "dep:base64", "dep:sha2",
    "dep:serde_json", "dep:chrono", "dep:rand",
]

# Services
zeroize         = ["dep:zeroize"]
totp            = ["dep:hmac", "dep:sha2"]
jwt             = ["dep:hmac", "dep:base64", "dep:serde_json", "dep:sha2"]
password-policy = []
tokio           = ["dep:tokio", "tokio/rt"]

# Convenience bundle
full = [
    "ids", "snowflake", "hash", "bcrypt", "scrypt", "sha",
    "encrypt", "zeroize", "totp", "jwt", "password-policy", "tokio",
]

# ── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
thiserror = "2"
serde     = { version = "1", features = ["derive"] }

serde_json  = { version = "1", optional = true }
base64      = { version = "0.22", optional = true }
chrono      = { version = "0.4", features = ["serde"], optional = true }
uuid        = { version = "1", features = ["v7", "serde"], optional = true }
rand        = { version = "0.8", optional = true }
sha2        = { version = "0.10", optional = true }
sha3        = { version = "0.10", optional = true }
argon2      = { version = "0.5", optional = true }
bcrypt      = { version = "0.19", optional = true }
scrypt      = { version = "0.11", features = ["password-hash"], optional = true }
password-hash = { version = "0.5", features = ["rand_core", "std"], optional = true }
aes-gcm     = { version = "0.10", optional = true }
hmac        = { version = "0.12", optional = true }
zeroize     = { version = "1", features = ["zeroize_derive"], optional = true }
tokio       = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
